{{$NEXT}}

v0.1.1	2019-10-05
    
    * Adding the :DELETE-ALL<I AM SURE> option to table .delete.

v0.1.0	2019-09-27

    * Add support for Date in the default save and load filters.

v0.0.5	2019-09-25

    * Apply save-filters during .create
    * Add support for MySQL last_insert_id().
    * Add support for DateTime in the default save and load filters.

v0.0.4	2019-09-10

    * Adding a new create method from existing row object.

v0.0.3	2018-11-16

    * Initial revision.