@@ -10,9 +10,10 @@ use MyTest::Accounts;
 
 my $tmpfile = [~] ('a'...'z','0'...'9','A'...'Z').roll(20);
 my IO $database = $*TMPDIR.add($tmpfile);
-my $dbh = DBIish.connect('SQLite', :$database);
 LEAVE $database.unlink;
-my $schema = MyTest::Accounts::Schema.new(:$dbh);
+my $schema = MyTest::Accounts::Schema.new(
+    connect-args => \('SQLite', :$database),
+);
 
 isa-ok $schema, ModelDB::Schema;
 does-ok $schema.accounts, ModelDB::Table[MyTest::Accounts::Model::Account];
